--- a/proxy/package.json
+++ b/proxy/package.json
@@ -4,6 +4,7 @@
   "description": "proxy microservices for user and contact",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,5 +12,11 @@
     "url": "contact Mangement microservices"
   },
   "author": "Muneer Ahamed Shaik",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-http-proxy": "^2.0.0",
+    "nodemon": "^3.0.1"
+  }
 }
